# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-last_mile_env"
version = "0.1.0"
description = "Last Mile Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Enables running via: uv run server
server = "last_mile_env.server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Searches the root for the 'last_mile_env' folder and includes it as a package
where = ["."]
include = ["last_mile_env*"]